--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "js-cookie": "^2.2.0",
     "nuxt": "^1.0.0",
     "sweetalert2": "^7.26.11",
     "vuetify": "^1.0.19"
